<resources>
    <string name="app_name" translatable="false">Insta Sitter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_error">Enter a valid name</string>
    <string name="family_name_error">Enter a valid name</string>
    <string name="email_error">Enter a valid email</string>
    <string name="phone_error">Enter a valid mobile</string>
    <string name="date_error">Enter a valid date</string>
    <string name="address_error">Enter a valid age</string>
    <string name="password_error">Enter a valid name</string>


    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="family_name">Family Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="service_provider">Service Provider</string>
    <string name="login">Login</string>
    <string name="service_provider_title_txt">Just a few more steps</string>
    <string name="upload_photos">Upload pictures</string>
    <string name="what_service">What kind of service are you providing?</string>
    <string name="dog_walker">Dog Walker</string>
    <string name="babysitter">Babysitter</string>
    <string name="service_type">Services Type</string>
    <string name="location">Location</string>
    <string name="about">About</string>
    <string name="about_description">About Description</string>
    <string name="rating">Rating</string>
    <string name="written_reviews">Written Reviews</string>
    <string name="id_number">ID number</string>
    <string name="choose_photo">Choose a profile picture</string>
    <string name="choose_photo_id">Choose an ID picture</string>
    <string name="back">Back</string>

</resources>